# TUI_Monster

./: .gitignore  ELIF.MD  LICENSE  README.md  README_Exampls.MD  btop_example  pyproject.toml  senior_engineer_evaluation.txt  simple_tui.py
.github/workflows/: ci.yml
examples/01_hello_world/: README.md  main.py
examples/02_live_clock/: README.md  main.py
examples/03_counter/: README.md  main.py
examples/04_task_tracker/: README.md  main.py
examples/05_GodMode_clock/: README.md  main.py
implementation/: README.md
implementation/dev_examples/01_script_runner/: README.md  main.py
implementation/dev_examples/02_progress_tracker/: README.md  main.py
implementation/dev_examples/03_menu_launcher/: README.md  main.py
implementation/docs/: mkdocs.yml
implementation/docs/docs/: examples.md  getting-started.md  index.md
implementation/docs/docs/api/: app.md  config.md  decorators.md
implementation/docs/docs/guides/: build-menu.md  scaffolding.md  wrapping-scripts.md
implementation/docs/docs/stylesheets/: extra.css
implementation/tools/: __init__.py  monster_menu.py  scaffold.py  wrap.py
implementation/tools/templates/basic/: README.md.tmpl  main.py.tmpl
implementation/tools/templates/menu/: README.md.tmpl  main.py.tmpl
implementation/tools/templates/wrapper/: README.md.tmpl  main.py.tmpl
pyTuiMonster/: README.md  __init__.py  app.py  config.py  decorators.py
tests/: test_hello_world_preview.py  test_runtime.py
training/: README.md  XMR_Godmode.sh  analysis_XMR_Godmode.MD
