[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pyTuiMonster"
version = "0.1.0"
description = "Decorator-friendly curses application runtime for terminal UIs."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "TUI_Monster maintainers" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console :: Curses",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: User Interfaces",
]

[tool.setuptools]
packages = ["pyTuiMonster"]
py-modules = ["simple_tui"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
