[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pyTuiMonster"
version = "0.1.0"
description = "Decorator-friendly curses application runtime for terminal UIs."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "TUI_Monster maintainers" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console :: Curses",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: User Interfaces",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "ruff>=0.4",
]

[tool.setuptools]
packages = ["pyTuiMonster"]
py-modules = ["simple_tui"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
# Examples bootstrap sys.path before importing the local package.
"examples/*/main.py" = ["E402"]
